# Drifter

./: .gitignore  CMakeLists.txt  README.md
Arduino/FreeIMUTest/: .cproject  .project  Callbacks.h  Encoder.h  FreeIMUTest.cpp  FreeIMUTest.h  HBridgeMotor.cpp  HBridgeMotor.h  PacketUtils.cpp  PacketUtils.h
Arduino/FreeIMUTest/Release/: FreeIMUTest.d  FreeIMUTest.h.elf  FreeIMUTest.h.hex  FreeIMUTest.h.lss  HBridgeMotor.d  PacketUtils.d  makefile  sources.mk  subdir.mk
Arduino/FreeIMUTest/Release/I2Cdev/: I2Cdev.d  subdir.mk
Arduino/FreeIMUTest/Release/MPU60X0/: MPU60X0.d  subdir.mk
Arduino/FreeIMUTest/Release/SPI/: SPI.d  subdir.mk
Arduino/FreeIMUTest/Release/Wire/: Wire.d  subdir.mk
Arduino/FreeIMUTest/Release/Wire/utility/: subdir.mk  twi.d
Arduino/New folder/: test.h.txt
Pokus/: test.txt
drifterCar/: CMakeLists.txt
drifterCar/src/: CMakeLists.txt  DrifterCar.cpp  DrifterCar.h  PacketUtils.cpp  PacketUtils.h  TimeoutSerial.cpp  TimeoutSerial.h
drifterCar/test/: CMakeLists.txt  GamePad.cpp
objectTracking/: CMakeLists.txt  README.md
objectTracking/cameraCalibration/: CMakeLists.txt  camera_calibration.cpp  default_calibration_settings.xml
objectTracking/carTracking/: CMakeLists.txt  ProjectUtilities.h  checkMarkers.cpp  determineCameraPosition.cpp  recordVideoWithoutControl.cpp  setUpMarker.cpp  showGroundMarkers.cpp  trackCar.cpp
objectTracking/examples/: CMakeLists.txt  preprocessImage.cpp
objectTracking/setUpPrograms/: CMakeLists.txt  checkMarkers.cpp  determineCameraPosition.cpp  setUpMarker.cpp  showGroundMarkers.cpp  trackPoint.cpp
objectTracking/tests/: CMakeLists.txt  carTrackerTest.cpp  customResolutionCapture.cpp  main.cpp  videoCaptureOptionsAndParameters.cpp
